# DuoSubs

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  version.yml
demo/: secondary_sub.srt
docs/: api_references.rst  api_usage.rst  cli.rst  conf.py  design.rst  getting_started.rst  index.rst  release_notes.rst  requirements.txt
docs/_static/: custom.css
docs/api_references/: core_subtitle_merging.rst  web_ui_launching.rst
docs/api_usage/: core_subtitle_merging.rst  web_ui_launching.rst
docs/cli_usage/: launch_webui.rst  merge.rst  miscellaneous.rst  usage.rst
docs/design_and_limitations/: design.rst
docs/getting_started/: cloud_deployment.rst  local_deployment.rst
duosubs/: __init__.py
duosubs/cli/: main.py
duosubs/common/: enums.py  types.py
duosubs/core/: merge_pipeline.py  merger.py
duosubs/webui/assets/: merging_mode_info.html  title.html
duosubs/webui/monitor/: memory_monitor.py
duosubs/webui/ui/: common.py  events.py  layout.py
notebook/: DuoSubs-webui.ipynb
tests/cli/: test_main.py  test_main_launch.py  test_main_merge.py
tests/cli/data/: primary.srt  secondary.srt
tests/common_utils/: utils.py
tests/core/: test_merge_pipeline.py  test_merger.py
tests/core/data/: align_subs_neighbour.yaml  align_subs_with_sec_tokens.yaml  eliminate_unnecessary_newline.yaml  extract_filter_non_overlap.yaml  filter_token_spans.yaml  filter_tokens_and_styles.yaml  generate_all_consecutive_combinations.yaml  get_progress_percentage.yaml  remove_extended_segments.yaml  retain_files.yaml
tests/io/: test_loader.py  test_utils.py  test_writer.py
tests/io/data/: extension_type.yaml  file_edit_subtitle_field.yaml  get_format_name.yaml  sub_processing.yaml  (+1 more)
tests/subtitle/: test_field.py  test_tokenizer.py
(+42 files in other folders)
